[package]
name = "aloft"
version = "0.3.0"
authors = ["Nate Mara <natemara@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Simple library for interacting with winds aloft data from NOAA"
repository = "https://github.com/natemara/aloft-rs"
homepage = "https://github.com/natemara/aloft-rs"

[dependencies]
hyper = "0.5.2"
regex = "0.1.8"
regex_macros = "0.1.8"
rustc-serialize = "0.3.14"
chrono = "0.2.14"
